force-app/main/default/objects/NCR_Payments_Site__c/NCR_Payments_Site__c.object-meta.xml
<CustomObject>
    <label>NCR Payments Site</label>
    <nameField>
        <displayFormat>NCRPS-{000000}</displayFormat>
        <label>NCR Payments Site Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCR Payments  Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>