force-app/main/default/objects/NCR_Payments_Site__c/fields/Account_Sites__c.field-meta.xml
<CustomField>
    <fullName>Account_Sites__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Sites</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>((1 OR 2) AND 3 AND 4) OR 5</booleanFilter>
        <errorMessage>Site needs to be a deliver to child site of the quote&apos;s account</errorMessage>
        <filterItems>
            <field>Account.Deliver_To__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Account.Primary_Deliver_To__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Site</value>
        </filterItems>
        <filterItems>
            <field>Account.ParentId</field>
            <operation>equals</operation>
            <valueField>$Source.qtc_Account_Site_Parent__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.qtc_Multi_Site__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NCR Payments Sites</relationshipLabel>
    <relationshipName>NCR_Payments_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>