force-app/main/default/objects/NCR_Payments_Site__c/fields/AdministratorURL__c.field-meta.xml
<CustomField>
    <fullName>AdministratorURL__c</fullName>
    <label>AdministratorURL</label>
    <type>Url</type>
</CustomField>