force-app/main/default/objects/NCR_Payments_Site__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Zuora__CustomerAccount__c</referenceTo>
    <relationshipName>Jetpay_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>