force-app/main/default/objects/NCR_Payments_Site__c/fields/Cobrand__c.field-meta.xml
<CustomField>
    <fullName>Cobrand__c</fullName>
    <label>Cobrand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>