force-app/main/default/objects/NCR_Payments_Site__c/fields/Cobrand_URL__c.field-meta.xml
<CustomField>
    <fullName>Cobrand_URL__c</fullName>
    <label>Cobrand URL</label>
    <type>Url</type>
</CustomField>