force-app/main/default/objects/NCR_Payments_Site__c/fields/eCommerce_TID__c.field-meta.xml
<CustomField>
    <fullName>eCommerce_TID__c</fullName>
    <label>eCommerce TID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>