force-app/main/default/objects/NCR_Payments_Site__c/fields/Gateway_Provisioning_Status__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Provisioning_Status__c</fullName>
    <label>Gateway Provisioning Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>