force-app/main/default/objects/NCR_Payments_Site__c/fields/Gateway_Store_Number_eCommerce__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Store_Number_eCommerce__c</fullName>
    <label>Gateway Store Number eCommerce</label>
    <length>100</length>
    <type>Text</type>
</CustomField>