force-app/main/default/objects/NCR_Payments_Site__c/fields/InfiniceptApplicationId__c.field-meta.xml
<CustomField>
    <fullName>InfiniceptApplicationId__c</fullName>
    <label>InfiniceptApplicationId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>