force-app/main/default/objects/NCR_Payments_Site__c/fields/Merchant_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Application_Id__c</fullName>
    <label>Merchant Application Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>