force-app/main/default/objects/NCR_Payments_Site__c/fields/NCR_Payments_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>NCR_Payments_Application_Status__c</fullName>
    <label>NCR Payments Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Submission successful.</fullName>
            </value>
            <value>
                <fullName>NewPend</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>AcquirerReview</fullName>
            </value>
            <value>
                <fullName>ApprovedAndBoarded</fullName>
            </value>
            <value>
                <fullName>FollowUp</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>RePend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>