force-app/main/default/objects/NCR_Payments_Site__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>NCR_Payments_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>