force-app/main/default/objects/NCR_Payments_Site__c/fields/qtc_Account_Site_Parent__c.field-meta.xml
<CustomField>
    <fullName>qtc_Account_Site_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Site Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NCR Payments  Sites (Account Site Parent)</relationshipLabel>
    <relationshipName>NCR_Payments_Sites_Parent</relationshipName>
    <type>Lookup</type>
</CustomField>