force-app/main/default/objects/NCR_Payments_Site__c/fields/qtc_Block_Delete__c.field-meta.xml
<CustomField>
    <fullName>qtc_Block_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to prevent end users from deleting NCR Payments Sites that they shouldn&apos;t be deleting.</description>
    <label>Block Delete</label>
    <type>Checkbox</type>
</CustomField>