force-app/main/default/objects/NCR_Payments_Site__c/fields/qtc_Fulfillment_Order__c.field-meta.xml
<CustomField>
    <fullName>qtc_Fulfillment_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfillment Order</label>
    <referenceTo>qtc_FulfillmentOrder__c</referenceTo>
    <relationshipLabel>NCR Payments  Sites</relationshipLabel>
    <relationshipName>NCR_Payments_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>