force-app/main/default/objects/NCR_Payments_Site__c/fields/qtc_Multi_Site__c.field-meta.xml
<CustomField>
    <fullName>qtc_Multi_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to implement lookup filter on Account Sites field for multi-site quotes</description>
    <label>Multi-Site</label>
    <type>Checkbox</type>
</CustomField>