force-app/main/default/objects/NCR_Payments_Site__c/fields/qtc_Primary_Site__c.field-meta.xml
<CustomField>
    <fullName>qtc_Primary_Site__c</fullName>
    <formula>Account_Sites__c =  Quote__r.Deliver_To_Site__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Site</label>
    <type>Checkbox</type>
</CustomField>