force-app/main/default/objects/NCR_Payments_Site__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>NCR Payments  Sites</relationshipLabel>
    <relationshipName>NCR_Payments_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>