force-app/main/default/objects/NCR_Payments_Site__c/fields/Site_Number__c.field-meta.xml
<CustomField>
    <fullName>Site_Number__c</fullName>
    <formula>Billing_Account__r.ERPSiteNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Number</label>
    <type>Text</type>
</CustomField>