force-app/main/default/objects/NCR_Payments_Site__c/fields/SiteId__c.field-meta.xml
<CustomField>
    <fullName>SiteId__c</fullName>
    <label>SiteId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>