force-app/main/default/objects/NCR_Payments_Site__c/validationRules/Block_Delete.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Delete</fullName>
    <active>true</active>
    <description>Used in conjunction with a before-delete flow to prevent users from deleting Payments Site records they shouldn&apos;t be</description>
    <errorConditionFormula>AND(
				 qtc_Block_Delete__c,
			NOT(CONTAINS($Profile.Name,&apos;Admin&apos;)),
				NOT(CONTAINS($Profile.Name, &apos;Orchestrator&apos;))
				)</errorConditionFormula>
    <errorMessage>You do not have permission to delete this NCR Payments Site Record</errorMessage>
</ValidationRule>