force-app/main/default/objects/NCR_Payments_Site__c/validationRules/CPQQuoteExpiredValidationNCRPaySite.validationRule-meta.xml
<ValidationRule>
    <fullName>CPQQuoteExpiredValidationNCRPaySite</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Quote__r.SBQQ__Status__c, &apos;Expired&apos;), $Profile.Name != &apos;NCR Payments Orchestrator&apos;)</errorConditionFormula>
    <errorMessage>Payment Site changes are not allowed on an Expired quote In case you want to work on this quote, please contact Sales Ops for un-expiring the quote.</errorMessage>
</ValidationRule>