force-app/main/default/objects/NCR_Payments_Site__c/validationRules/Only_MSQuotes_Have_Payment_Site_Rec.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_MSQuotes_Have_Payment_Site_Rec</fullName>
    <active>true</active>
    <description>Only Multi-Site quotes can have NCR Payment Sites records.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Quote__c)), 
ISBLANK(InfiniceptApplicationId__c),
Quote__r.qtc_Multi_Site__c=FALSE,
 ISNEW() )</errorConditionFormula>
    <errorMessage>Only Multi-Site quotes can have NCR Payment Sites records created</errorMessage>
</ValidationRule>