force-app/main/default/objects/NCR_Payments_Site__c/validationRules/Only_PP_Parent_Quotes.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_PP_Parent_Quotes</fullName>
    <active>true</active>
    <description>Only PP Parent quotes can have payments sites.</description>
    <errorConditionFormula>AND(
				NOT(ISBLANK(Quote__c)),
				Quote__r.qtc_Multi_Site__c,
OR(
				ISPICKVAL(Quote__r.qtc_Multi_Site_Relationship__c ,&apos;Child&apos;),
				AND(
								ISPICKVAL(Quote__r.qtc_Multi_Site_Relationship__c ,&apos;Parent&apos;),
								ISPICKVAL( Quote__r.qtc_Multi_Site_Type__c ,&apos;AE Only&apos;)
								)
        )
								)</errorConditionFormula>
    <errorDisplayField>qtc_Account_Site_Parent__c</errorDisplayField>
    <errorMessage>Only Multi-Site Payments Parent quotes can have Payments Sites added.</errorMessage>
</ValidationRule>